# yolo-sam-training

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
models/yolo_fine_tuned/: args.yaml
opencv_project_inference_output/20250305_153349_0f263ce3/: processing_times.csv  roi_coordinates.json
opencv_project_inference_output/20250305_153526_d82838ab/: contours.csv  roi_coordinates.json
src/yolo_sam_training/: __init__.py  data.py  sam_training.py  utils.py  visualization.py  yolo_training.py
src/yolo_sam_training/examples/: S01_dataset_loading_example.py  S03_sam_training_example.py  S04_remote_sam_training_example.py  __init__.py  dataset_loading_example.py  register_recent_model.py  register_recent_sam_model.py  sam_preprocessing_example.py  sam_training_example.py  template_example.py  tune_yolo_training_example.py  yolo_training_example.py
src/yolo_sam_training/utils/: README_model_registry.md  __init__.py  manage_model_versions.py  register_model.py
tests/: test_data_loading.py
